--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,1 +1,12 @@
-CONTACT
+<div id="contact">
+    
+
+    <h1>Contact</h1>
+    <h3>UPOSH|ME</h3>
+    <p>Email : contact.uposhme@gmail.com</p>
+
+    <br>
+    <button><a href="/">RETOUR</a></button>
+
+    
+</div>
