--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -1,1 +1,10 @@
-FAQ
+<div id="faq">
+    
+
+    <h1>EN CONSTRUCTION</h1>
+    <img src="https://www.fncaue.com/wp-content/uploads/2019/08/picto_construction.png" alt="under construction">
+    <br>
+    <button><a href="/">RETOUR</a></button>
+
+    
+</div>
