--- a/views/auth/tuto.hbs
+++ b/views/auth/tuto.hbs
@@ -7,7 +7,7 @@
 
     <video controls width="800" height="500">
 
-        <source src="/video/toto.mp4"
+        <source src="/video/finaltuto.mp4"
                 type="video/mp4">
 
     </video>
