route GET et POST BRAND DETAIL fonctionnelles

--- a/views/brands/brand-detail.hbs
+++ b/views/brands/brand-detail.hbs
@@ -1,10 +1,10 @@
 <div id="brand-detail">
-    {{#each brand}}
-      <div><a href="{{websiteUrl}}" target="_blank"><img id="logo" src="{{logoUrl}}"></a></div>
-      <div>{{brandname}}</div>
-      <div>{{categorie}}</div>
-    {{/each}}
+      <div><a href="{{brand.websiteUrl}}" target="_blank"><img id="logo" src="{{brand.logoUrl}}"></a></div>
+      <div>{{brand.brandname}}</div>
+      <div>{{brand.categorie}}</div>
+    
     <button><a href="/mybrands">RETOUR VERS MES MARQUES</a></button>
-    <button><a href="">Supprimer la marque</a></button>
+    <form action="/brand-detail/{{id}}/delete" method="POST"><button><a href="">Supprimer la marque</a></button></form>
   </div>
 </div>
+
