--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -8,12 +8,12 @@
     
     {{#each brands}}
       <div>
-        <a href="/brand-detail"><img id="logo" src="{{logoUrl}}"></div>
+        <a href="/brand-detail/{{id}}"><img id="logo" src="{{logoUrl}}"></div>
         </a>
-        
-      <div>{{brandname}}</div>
+      
     {{/each}}
     
   </div>
-<button><a href="/brand-detail">marque test</a></button>
 </div>
+
+
