--- a/views/brands/brand-detail.hbs
+++ b/views/brands/brand-detail.hbs
@@ -4,7 +4,7 @@
       <div>{{brand.categorie}}</div>
     
     <button><a href="/mybrands">RETOUR VERS MES MARQUES</a></button>
-    <form action="/brand-detail/{{id}}/delete" method="POST"><button><a href="">Supprimer la marque</a></button></form>
+    <form action="/Brand-detail/{{id}}/delete" method="POST"><button>Supprimer la marque</button></form>
   </div>
 </div>
 
