--- a/views/brands/mybrands.hbs
+++ b/views/brands/mybrands.hbs
@@ -8,8 +8,8 @@
     
     {{#each brands}}
       <div>
-        <a href="/brand-detail/{{id}}"><img id="logo" src="{{logoUrl}}"></div>
-        </a>
+        <a href="/brand-detail/{{id}}"><img id="logo" src="{{logoUrl}}"></a>
+      </div>
       
     {{/each}}
     
