css brand detail et message confirmation done

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -446,6 +446,11 @@ footer li {
   border: none;
   background-color: var(--light-grey); }
 
+.profil-delete button:hover {
+  border: none;
+  background-color: var(--light-grey);
+  color: red; }
+
 /*
 ######## ##     ## ########  #######  
    ##    ##     ##    ##    ##     ## 
@@ -543,22 +548,23 @@ footer li {
   width: 700px; }
 
 .logo-detail {
-  height: 400px; }
+  height: 300px; }
 
 .logodetail-img {
   -webkit-transform: scale(1);
   transform: scale(1);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out; }
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out; }
 
 .logodetail-img:hover {
   -webkit-transform: scale(1.3);
   transform: scale(1.3); }
 
 #brand-detail h2 {
-  margin-top: 30px; }
+  margin-top: 30px;
+  margin-bottom: 50px; }
 
-#brand-detail button {
+.returnmybrand-button {
   margin-top: 60px;
   border: none;
   padding: 15px 50px 15px 50px;
@@ -566,9 +572,16 @@ footer li {
   box-shadow: 1px 1px 3px #aaa;
   background: var(--black-button);
   color: white;
-  font-size: 13px; }
+  font-size: 13px;
+  margin-bottom: 150px; }
 
-#brand-detail deletebrand-button {
+.deletebrand-button {
+  border: none;
+  background-color: var(--light-grey); }
+
+.deletebrand-button:hover {
+  border: none;
+  background-color: var(--light-grey);
   color: red; }
 
 /*
@@ -651,60 +664,37 @@ footer li {
 ##     ## ##     ## ##    ##  ##  ##   ### ##       ##    ## ##    ##    ##    ## ##     ## ##   ### ##        ##  ##    ##  ##     ## ##     ##    ##     ##  ##     ## ##   ### 
 ########   #######   ######  #### ##    ## ########  ######   ######      ######   #######  ##    ## ##       #### ##     ## ##     ## ##     ##    ##    ####  #######  ##    ## 
 */
-#business-confirm {
-  text-align: center;
-  margin-top: 100px;
-  height: 1000px;
-  font-size: 15px; }
-
-#business-confirm h1 {
-  text-align: center;
-  padding-bottom: 50px; }
-
-#business-confirm div {
-  padding: 10px 550px 10px 550px; }
-
-.businessconfirm-form label {
+.popin .close {
   display: block;
-  font-family: 'Roboto', sans-serif;
-  padding-bottom: 10px;
-  padding-left: 2px;
-  text-align: left;
-  color: black;
-  font-weight: bold; }
+  width: 30px;
+  height: 30px;
+  background: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 1px solid; }
 
-.businessconfirm-form select {
-  width: 100%;
-  height: 50px;
-  font-size: 15px;
-  background-color: #E9E9E9;
-  border-style: none;
-  margin-bottom: 20px; }
-
-.businessconfirm-form label + input {
-  display: inline-block;
-  width: 100%;
-  height: 50px;
-  font-size: 15px;
-  padding-left: 10px;
-  background-color: #E9E9E9;
-  border-style: none;
-  margin-bottom: 20px; }
-
-.businessconfirm-form button {
-  margin-top: 60px;
-  border: none;
-  padding: 15px 50px 15px 50px;
-  border-radius: 2px;
-  box-shadow: 1px 1px 3px #aaa;
+.popin {
+  position: relative;
   background: var(--black-button);
-  color: white;
-  font-size: 13px; }
+  height: 40vh;
+  width: 35%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  font-size: 20px;
+  color: white; }
 
-.msg-confirmation {
-  height: 300px;
-  width: 100px;
-  position: absolute; }
+.popin span {
+  display: block;
+  width: 100%;
+  text-align: center; }
+
+.business-confirm {
+  height: 100vh;
+  display: flex; }
 
 /*
 ########    ###     #######  
