--- a/views/brands/brand-detail.hbs
+++ b/views/brands/brand-detail.hbs
@@ -9,9 +9,14 @@
       
       
     
-    <button><a href="/mybrands">RETOUR VERS MES MARQUES</a></button>
+    <button class="returnmybrand-button"><a href="/mybrands">RETOUR VERS MES MARQUES</a></button>
+    
+    <div >
+      <form action="/Brand-detail/{{id}}/delete" method="POST">
+        <button class="deletebrand-button">Supprimer la marque</button>
+      </form>
+    </div>
 
-    <form action="/Brand-detail/{{id}}/delete" method="POST"><button class="deletebrand-button">Supprimer la marque</button></form>
-  </div>
+  
 </div>
 
