delete brand fonctionnelle

--- a/views/brands/brand-detail.hbs
+++ b/views/brands/brand-detail.hbs
@@ -12,7 +12,7 @@
     <button class="returnmybrand-button"><a href="/mybrands">RETOUR VERS MES MARQUES</a></button>
     
     <div >
-      <form action="/Brand-detail/{{id}}/delete" method="POST">
+      <form action="/Brand-detail/{{brand.id}}/delete" method="POST">
         <button class="deletebrand-button">Supprimer la marque</button>
       </form>
     </div>
