--- a/views/Legal/confidentialite.hbs
+++ b/views/Legal/confidentialite.hbs
@@ -4,7 +4,7 @@
     <h1>EN CONSTRUCTION</h1>
     <img src="https://www.fncaue.com/wp-content/uploads/2019/08/picto_construction.png" alt="under construction">
     <br>
-    <button><a href="/">RETOUR</a></button>
+    <button><a href="/mybrands">RETOUR</a></button>
 
     
 </div>
