--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,7 +238,8 @@ footer li {
   height: 150px;
   object-fit: cover;
   margin-right: 10px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  box-shadow: 0px 0px 2px #aaa; }
 
 /*
 ######  ####  ######   ##    ##    ##     ## ########  
