--- a/views/auth/profil-edit.hbs
+++ b/views/auth/profil-edit.hbs
@@ -2,7 +2,7 @@
   {{#if user}}
     <h1>Mon profil</h1>
     <h2>{{ user.civilite }} {{ user.firstname }} {{ user.lastname }}</h2>  
-    <h4>Membre depuis le {{ user.createdAt }}</h4>
+    {{!-- <h4>Membre depuis le {{ user.createdAt }}</h4> --}}
 
 
   <div class="editprofil-form">
