--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -6,7 +6,7 @@
     <p>Email : contact.uposhme@gmail.com</p>
 
     <br>
-    <button><a href="/mybrands">RETOUR</a></button>
+    <button><a href="/">RETOUR</a></button>
 
     
 </div>
